build_errors.txt
Game.cpp: In member function 'void Game::handleEvents()':
Game.cpp:98:49: error: no matching function for call to 'sf::RenderWindow::pollEvent()'
   98 |     while (const auto event = m_window.pollEvent()) {
      |                               ~~~~~~~~~~~~~~~~~~^~
Game.cpp:98:49: note: there is 1 candidate
In file included from C:/msys64/ucrt64/include/SFML/Window/Window.hpp:33,
                 from C:/msys64/ucrt64/include/SFML/Window.hpp:44,
                 from C:/msys64/ucrt64/include/SFML/Graphics.hpp:32,
                 from include/Game.h:4,
                 from Game.cpp:1:
C:/msys64/ucrt64/include/SFML/Window/WindowBase.hpp:170:10: note: candidate 1: 'bool sf::WindowBase::pollEvent(sf::Event&)'
  170 |     bool pollEvent(Event& event);
      |          ^~~~~~~~~
C:/msys64/ucrt64/include/SFML/Window/WindowBase.hpp:170:10: note: candidate expects 1 argument, 0 provided
Game.cpp:99:42: error: expected primary-expression before ')' token
   99 |         if (event->is<sf::Event::Closed>()) {
      |                                          ^
Game.cpp:103:74: error: expected primary-expression before ')' token
  103 |         if (const auto* keyPressed = event->getIf<sf::Event::KeyPressed>()) {
      |                                                                          ^
Game.cpp: In member function 'void Game::drawBoard()':
Game.cpp:229:59: error: 'sf::FloatRect' {aka 'class sf::Rect<float>'} has no member named 'size'
  229 |             static_cast<float>(windowSize.x) / spriteSize.size.x,
      |                                                           ^~~~
Game.cpp:230:59: error: 'sf::FloatRect' {aka 'class sf::Rect<float>'} has no member named 'size'
  230 |             static_cast<float>(windowSize.y) / spriteSize.size.y
      |                                                           ^~~~
Game.cpp: In member function 'void Game::checkDeath()':
Game.cpp:314:32: error: 'sf::FloatRect' {aka 'class sf::Rect<float>'} has no member named 'findIntersection'
  314 |                 if (playerRect.findIntersection(lavaPool)) {
      |                                ^~~~~~~~~~~~~~~~
Game.cpp:325:32: error: 'sf::FloatRect' {aka 'class sf::Rect<float>'} has no member named 'findIntersection'
  325 |                 if (playerRect.findIntersection(waterPool)) {
      |                                ^~~~~~~~~~~~~~~~
Game.cpp:336:32: error: 'sf::FloatRect' {aka 'class sf::Rect<float>'} has no member named 'findIntersection'
  336 |                 if (playerRect.findIntersection(gooPool)) {
      |                                ^~~~~~~~~~~~~~~~
Game.cpp: In member function 'void Game::checkCollisions()':
Game.cpp:358:28: error: 'sf::FloatRect' {aka 'class sf::Rect<float>'} has no member named 'findIntersection'
  358 |             if (playerRect.findIntersection(gateRect)) {
      |                            ^~~~~~~~~~~~~~~~
Game.cpp: In member function 'bool Game::checkWin()':
Game.cpp:377:40: error: 'sf::FloatRect' {aka 'class sf::Rect<float>'} has no member named 'findIntersection'
  377 |             if (m_hotPlayer->getRect().findIntersection(doorRect)) {
      |                                        ^~~~~~~~~~~~~~~~
Game.cpp:387:41: error: 'sf::FloatRect' {aka 'class sf::Rect<float>'} has no member named 'findIntersection'
  387 |             if (m_coldPlayer->getRect().findIntersection(doorRect)) {
      |                                         ^~~~~~~~~~~~~~~~
make: *** [Makefile:28: Game.o] Error 1
